#0 - Заставил работать primevue, обновил шапку, сделал переключатель цветов, добавил layout

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import "./normalize.sass";
-@import "./reset.sass";
+// @import "./reset.sass";
 @import "./variables.scss";
 @import "./fonts/sfpro.sass";
 @import "./base.scss";
