--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -33,4 +33,5 @@ $unit-2: calc(var(--unit) * 2);
     --black: #181818;
     --color-background: var(--white);
     --color-text: var(--black);
+    --unit: 70px;
 }
