#0 - Добавил firebase, сделал страницу логина, сделал форму регистрации + кнопка гугла

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,7 +1,8 @@
 @import "./normalize.sass";
 // @import "./reset.sass";
 @import "./variables.scss";
+@import "./responsive.sass";
 @import "./fonts/sfpro.sass";
 @import "./base.scss";
 @import "./theme.scss";
-@import "./responsive.sass";
+@import "./layout.scss";
