--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -3,11 +3,19 @@ a {
     transition: $trs;
 }
 
+h1,
+h2,
+h3,
+h4 {
+    padding: 0;
+    margin: 0;
+}
+
 body {
     background-color: var(--color-background);
 
     min-height: 100vh;
-    color: $color-text;
+    color: var(--color-text);
     transition: $trs;
     line-height: 1.6;
     @include sfpro(r);
