--- a/src/assets/scss/responsive.sass
+++ b/src/assets/scss/responsive.sass
@@ -33,7 +33,7 @@
     @error "linear-interpolation() $map must be exactly 2 values"
 
   // The slope
-  $m: calc((map-get($map, nth($keys, 2)) - map-get($map, nth($keys, 1))) / (nth($keys, 2) - nth($keys, 1)))
+  $m: (map-get($map, nth($keys, 2)) - map-get($map, nth($keys, 1))) / (nth($keys, 2) - nth($keys, 1))
 
   // The y-intercept
   $b: map-get($map, nth($keys, 1)) - $m * nth($keys, 1)
