--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -24,3 +24,14 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+#app {
+    &.is-loaded {
+        header {
+            opacity: 1;
+        }
+        main {
+            opacity: 1;
+        }
+    }
+}
