#0 - CTA на главной

--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -1,6 +1,7 @@
 [data-theme="dark"] {
     --color-background: var(--black);
     --color-text: var(--white);
+    --color-text-dark: var(--white);
 
     .theme-switcher {
         label {
